# HCMAI

./: .gitignore  docker-compose.yml  pyproject.toml
playground/: L01_V003.json  chunked_events.json  chunked_events_enhanced.json  scene.json  step12.py  test.ipynb  test_arangodb.ipynb
playground/sample/response/: debug_workflow1.json  visual_caption_output.json
playground/src/: event.py  keyframe_analysis_prompt.py  llm.py  output_schema.py  schema.py  workflow.py
src/audio_extraction/chunkformer/: decode.py  decode_vid.py
src/event_processing/prompt/: few_shot_prompt.py  requirements.py
src/ocr/: data_preparation.py
src/processing/audio_extraction/: audio_extraction.py
src/processing/audio_extraction/chunkformer/: decode.py  decode_batch.py
src/processing/event_processing/prompt/: requirements.py
src/processing/object_detection/: Dockerfile
src/processing/object_extraction/recognize-anything/: rec_obj_processing.py
src/processing/object_extraction/recognize-anything/ram/models/: __init__.py  ram_plus.py
src/processing/scripts/: extract_asr.sh  extract_audio.sh  object_detection.sh  ram_extract.sh
src/processing/video_processing/: autoshot.py  main.py  utils.py
src/scripts/: vid_proc.sh
src/video_processing/: main.py  remove_duplicate.py
