[project]
name = "hcmai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "einops>=0.8.1",
    "ffmpeg-python>=0.2.0",
    "imagehash>=4.3.2",
    "ipywidgets>=8.1.7",
    "jiwer>=3.1.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "tensorflow>=2.18.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]
